# uzi

./: .gitignore  LICENSE.txt  README.md  conftest.py  manage.py  mkdocs.yml  note.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  todo.md  tox.ini  versions.json
.github/workflows/: publish-to-pypi.yml  workflow.yaml  workflow.yml
0.0.x/: 404.html  concepts.html  contributing.html  features.html  index.html  install.html  objects.inv  sitemap.xml  why.html
0.0.x/advanced/: containers.html  index.html  scopes.html
0.0.x/api/: _bindings.html  _common.html  _functools.html  containers.html  exceptions.html  graph.html  index.html  injectors.html  markers.html  scopes.html
0.0.x/basic/: index.html
0.0.x/examples/: index.html
0.0.x/frameworks/: django.html  index.html  sanic.html
0.0.x/search/: search_index.json
0.1.x/: 404.html  concepts.html  contributing.html  features.html  index.html  install.html  objects.inv  sitemap.xml  why.html
0.1.x/advanced/: index.html  scopes.html
0.1.x/api/: _bindings.html  _common.html  _functools.html  containers.html  exceptions.html  graph.html  index.html  injectors.html  markers.html  scopes.html
0.1.x/basic/: index.html
0.1.x/examples/: index.html
0.1.x/frameworks/: django.html  index.html  sanic.html
0.1.x/search/: search_index.json
0.2.x/: 404.html  concepts.html  contributing.html  features.html  index.html  install.html  objects.inv  sitemap.xml  why.html
0.2.x/advanced/: containers.html  index.html  scopes.html
0.2.x/api/: _bindings.html  _common.html  _functools.html  containers.html  exceptions.html  graph.html  index.html  injectors.html  markers.html  scopes.html
0.2.x/basic/: index.html
0.2.x/basic_usage/: index.html
0.2.x/examples/: index.html
0.2.x/frameworks/: django.html  index.html  sanic.html
0.2.x/search/: search_index.json
0.3.x/: 404.html  concepts.html  contributing.html  features.html  index.html  install.html  objects.inv  sitemap.xml  why.html
0.3.x/advanced/: containers.html  index.html  scopes.html
0.3.x/api/: _common.html  _functools.html  containers.html  exceptions.html  index.html  injectors.html  markers.html  scopes.html
0.3.x/basic/: index.html
0.3.x/basic_usage/: index.html
0.3.x/examples/: index.html
0.3.x/frameworks/: django.html  index.html  sanic.html
0.3.x/search/: search_index.json
0.4.x/: 404.html  index.html  objects.inv  sitemap.xml
0.4.x/basic_usage/: index.html
0.4.x/containers/: index.html
0.4.x/providers/: index.html
0.4.x/scopes/: index.html
0.4.x/search/: search_index.json
0.5.x/: 404.html  concepts.html  contributing.html  features.html  index.html  install.html  objects.inv  sitemap.xml  why.html
0.5.x/advanced/: containers.html  index.html  scopes.html
0.5.x/api/: _bindings.html  _common.html  _functools.html  containers.html  core.html  index.html  injectors.html  markers.html  scopes.html
0.5.x/basic/: index.html
0.5.x/concepts/: index.html
0.5.x/contributing/: index.html
0.5.x/examples/: index.html
0.5.x/features/: index.html
0.5.x/frameworks/: django.html  index.html  sanic.html
0.5.x/install/: index.html
0.5.x/search/: search_index.json
0.6.x/: concepts.html  contributing.html  index.html  install.html  objects.inv  sitemap.xml
0.6.x/advanced/: containers.html  index.html  scopes.html
0.6.x/api/: _bindings.html  _common.html  _functools.html  containers.html  core.html  injectors.html  markers.html  scopes.html
0.6.x/frameworks/: index.html  sanic.html
0.6.x/search/: search_index.json
0.7.x/: 404.html  concepts.html  contributing.html  features.html  index.html  install.html  objects.inv  sitemap.xml  why.html
0.7.x/advanced/: containers.html  index.html  scopes.html
0.7.x/api/: _bindings.html  _common.html  _functools.html  containers.html  exceptions.html  graph.html  index.html  injectors.html  markers.html  scopes.html
0.7.x/basic/: index.html
0.7.x/examples/: index.html
0.7.x/frameworks/: django.html  index.html  sanic.html
0.7.x/search/: search_index.json
djx/abc/: __init__.py  api.py  iam.py
djx/api/: __init__.py  abc.py  common.py  config.py  controllers.py  errors.py  exc.py  urls.py  (+9 more)
docs/: basic_usage.md  concepts.md  contributing.md  features.md  index.md  install.md  mkdocs.yml  why.md
example_app/: asgi.py  models.py  settings.py  test_settings.py  urls.py  views.py  wsgi.py
examples/applications/with-single-scope/: README.md  pyproject.toml  settings.ini
examples/applications/with-single-scope/example/: __main__.py  di.py  services.py  settings.py
latest/: 404.html  concepts.html  contributing.html  features.html  index.html  install.html  why.html
tests/: abc.py  assertions.py  checks.py  conftest.py  container_tests.py  factory_benchmark_1.py  json_tests.py  scope_tests.py
uzi/: __init__.py  _bindings.py  _functools.py  _receivers.py  containers.py  exceptions.py  graph.py  injectors.py  markers.py  providers.py  scopes.py  signals.py
xdi/: __init__.py  _bindings.py  _builtin.py  _dependency.py  _functools.py  _receivers.py  _wrappers.py  containers.py  core.py  ctx.py  exceptions.py  graph.py  injectors.py  makers.py  markers.py  providers.py  scopes.py  signals.py  test.py  typing.py  util.py
(+877 files in other folders)
