[tool.poetry]
name = "xdi"
version = "0.2.1"
description = "Dependency injection library"
authors = ["David Kyalo <kyalo@qwertie.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidkyalo/xdi"
documentation = "https://davidkyalo.github.io/xdi"
keywords = [
    "dependency-injection",
    "inversion-of-control",
    "inversion-of-control-container",
    "IoC-Container",
    "IoC",
    "DI",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
pytest-cov = {extras = ["toml"], version = "^3.0.0"}
pip = "^22.0.4"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.8"
mike = "^1.1.2"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
